--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-	<a href='http://tshe.com/c/fe83e4d4'> http://tshe.com/c/fe83e4d4 </a>
+	<a align='center' href='http://tshe.com/c/fe83e4d4'> http://tshe.com/c/fe83e4d4 </a>
 	<p align="center">Building for 24OI.</p>
 </html>
