添加鼠标动态效果

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		document.getElementById("b").background="https://acg.toubiec.cn/random.php?fa8e648d8f8fcb8469b51515"+Math.random();
 	}
 	</script>
+	<script type="text/javascript" src="ball.js"> </script>
 
 </head>
 
