--- a/qq.html
+++ b/qq.html
@@ -4,6 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="main.css" />
+	<script type="text/javascript" src="ball.js"> </script>
 	<title> 24OI | 官皮qq </title>
 
 	<style type="text/css">
