--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 </head>
 
-<body id="b" background="https://acg.toubiec.cn/random.php?fa8e648d8f8fcb8469b51515">
+<body id="b" background="https://api.3ewl.cc/acg/img.php">
 	<section class="title">
 		<img class="head" src="img/index/head.jpeg">  </img>
 		<h1 class="name"> 24OI </h1>
