--- a/qq.html
+++ b/qq.html
@@ -25,7 +25,7 @@
 	</style>
 </head>
 
-<body style="background:url('https://acg.toubiec.cn/random.php?fa8e648d8f8fcb8469b51515')">
+<body style="background:url('https://api.3ewl.cc/acg/img.php')">
 	<section style="opacity:0.8;">
 		<img class="head" src="img/index/head.jpeg">  </img>
 		<h1 class="name"> 24OI官皮qq </h1>
